# parallel_call

./: .gitignore  PLANS.md  README.md  TESTING_GUIDE.md  docker-compose.yml  document.md  document.xml
PROJECT_LOG/: 2025-01-23-initial-tdd-implementation.md  2025-01-23-phase5-e2e-tests.md  INDEX.md  issue-0001-2026-01-23-db-persistence.md
backend/: .env.example  README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260123_0001_create_campaigns_and_leads.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: auth.py  campaigns.py  twilio.py  webhooks.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/models/: campaign.py  lead.py
backend/app/schemas/: auth.py  campaign.py  twilio.py
backend/app/services/: auth_service.py  csv_parser.py  dependencies.py  dialer_orchestrator.py  operator_manager.py  twilio_mock.py  twilio_protocol.py  twilio_service.py
backend/app/websocket/: connection_manager.py  dashboard_ws.py  operator_ws.py
backend/tests/: __init__.py
backend/tests/e2e/: test_abandoned_call.py  test_dashboard_alerts.py  test_full_call_flow.py
backend/tests/unit/: test_auth_api.py  test_campaign_api.py  test_campaign_model.py  test_dashboard_websocket.py  test_dialer_orchestrator.py  test_lead_import_api.py  test_lead_model.py  test_operator_manager.py  test_operator_websocket.py  test_twilio_webhooks.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+24 files in other folders)
